# kaangui

./: .gitignore  ParentProperties.csv  Properties of Object Types.csv  README.md  TODO.md  TODO.txt  data.json  datasmall - Copy.json  datasmall.json  deneme.json  deneme1.json  json_from_model.py  main.py  main_test.py  objecttypes.json  pyproject.toml  requirements.txt  settings.default.json  settings.json
gui/core/: create_json.py  functions.py
gui/themes/: default.json
gui/uis/custom/: api.py  combo_delegate.py  constants.py  execution_controller.py  io.py  model_controller.py  model_helpers.py  node_sort_filter_proxy_model.py  node_tree_view.py  parents_table_model.py  parents_table_view.py  properties_table_model.py  properties_table_view.py  properties_table_widget.py  result_tree_view.py  results_controller.py  styled_button.py  testing.py  text_delegate.py  time_series_table_model.py  time_series_table_view.py  time_series_tree_view.py
gui/uis/pages/: ui_main_pages.py
gui/uis/windows/assign_group/: untitled.ui  (+1 more)
gui/widgets/comboBoxSearchable/: comboBoxSearchable.py
gui/widgets/py_customTree_widget/: __init__.py  py_customTree_widget.py
gui/widgets/py_date_edit/: __init__.py  py_date_edit.py
gui/widgets/py_left_menu/: py_left_menu.py
gui/widgets/py_line_edit/: py_line_edit.py
gui/widgets/py_table_widget/: py_table_widget.py  style.py
gui/widgets/py_tree_view/: __init__.py  py_tree_view.py  style.py
tests/: fixtures.py  test_create_json.py  test_execution_page.py  test_model_actions.py  test_parents_table.py  test_properties_table.py
(+84 files in other folders)
